--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -205,6 +205,7 @@ ownCloud - облачное хранилище данных позволяюще
 \end{itemize}
 
 Для работы серверной части требуются следующие библиотеки:
+
 \begin{itemize}
  \item psycopg2 - Интерфейс к СУБД PostgreSQL.
  \item sqlalchemy - Библиотека объектно-реляционного отображения данных.
@@ -219,7 +220,7 @@ ownCloud - облачное хранилище данных позволяюще
  \item pydev -- модуль для разработки и отладки для языка Python.
  \item CDT -- модуль для разработки и отладки для языков C и C++.
  \item Visual Paradigm Community Edition -- средство проектирования UML диаграмм.
- \item PostgreSQL -- свободная объектно-реляционная система управления базами данных (СУБД).  
+ \item PostgreSQL -- свободная реляционная система управления базами данных (СУБД).  
 \end{itemize}
 
 Система основана на следующих открытых решениях:
@@ -907,11 +908,53 @@ class ObjectProperty(Base):
 
 \section{Особенности тестирования и отладки}
 
-Тестирование системы производилось методом <<юнит-тестирования>> её компонентов. В качестве средства тестирования используется инструмент PyUnit. 
-
 Тестирование программного обеспечения – проверка соответствия между реальным и ожидаемым поведением программы, осуществляемая на конечном наборе тестов, выбранном определенным образом (IEEE Guide to Software Engineering Body of Knowledge, SWEBOK, 2004). В более широком смысле, тестирование - это одна из техник контроля качества, включающая в  себя активности по планированию работ (Test Management), проектированию тестов (Test Design), выполнению тестирования (Test Execution) и анализу полученных результатов (Test Analysis).
 
 Во всех системах, основанных на взаимодействии между клиентом и сервером, уязвимости обычно возникают из-за некорректной обработки запросов клиента и/или недостаточной проверки входной информации со стороны разработчика. 
+
+Процесс исчерпывающего тестирования по методу черного ящика включает в себя исследование каждого элемента данных, определение ожидаемого ввода, искажение его, и анализ результатов работы приложения на предмет выявления признаков неожиданного поведения. Во многих случаях разработчики требуют от клиентов входные данные, которые должны быть защищены от изменения пользователем - такие как идентификатор пользователя, который генерируется динамически, передается клиенту, после чего используется во всех последующих запросах. Следует убедиться в отсутствии доступа ко всем ресурсам через каждую точку входа без осуществления процедуры авторизации.
+
+Основываясь на вышесказанное, был проведен целый ряд действий по тестированию серверной части системы. В процессе его разработки, согласно описанному выше жизненному циклу системы, постоянно проводилось тестирование разрабатываемых модулей. Ниже приведены некоторые из основных проведенных тестов:
+\begin{itemize}
+ \item проверка соответствия между результатами работы приложения и поставленной задачей
+ \item 
+ \item 
+ \item 
+ \item 
+\end{itemize}
+
+Процесс тестирования готового программного продукта обычно выполняется в соответствии с заранее подготовленным тест-планом или сценарием, который показывает ожидаемую реакцию системы на воздействие пользователя. Тестовый сценарий представляет собой таблицу, в которой последовательно описываются все действия пользователя. Для каждого шага предварительно составляется предполагаемая реакция системы, а также делается графа для заполнения реальной реакции системы на данное действие. По завершению данного шага и оценки реакции системы на воздействие пользователя, делается отметка о прохождении теста. Для каждого компонента системы составляется свой сценарий и на основании него проводится тестирование системы. Тестирование разрабатываемой системы производилось в  соответствии со сценариями, которые приведены ниже. Представленные таблицы показывают лишь сценарии для тестирования основных взаимодействий модулей. В таблицах~\ref{T:usecase_auth}~и~\ref{T:usecase_fail_auth} представлен тестовый сценарий для модуля авторизации. Пошаговые действия включают в себя последовательные действия над элементами пользовательского интерфейса.    
+
+\begin{longtable}[c]{|*{5}{p{0.16\linewidth}|}}
+
+\caption{Сценарий проверки авторизации c корректными параметрами \label{T:usecase_auth}}\\
+\hline # & Шаг сценария & Ожидаемый результат & Полученный результат & Совпадает \\ 
+\hline 1 & Запустить скрипт для монтирования ФС & На экран выводится запрос имени пользователя & Получено окно с полем ввода имени пользователя  & +  \\
+\hline 2 & Ввести имя правильное пользователя & На экран выводится запрос пароля & Получено окно с полем ввода пароля & + \\
+\hline 3 &  Ввести правильный пароль & Завершение приложения & Завершение приложения &  + \\
+%\hline 4 &  &  &  &  \\
+%\hline &  &  &  &  \\
+\end{longtable}
+
+\begin{longtable}[c]{|*{5}{p{0.16\linewidth}|}}
+
+\caption{Сценарий проверки авторизации с некорректными параметрами \label{T:usecase_fail_auth}}\\
+\hline # & Шаг сценария & Ожидаемый результат & Полученный результат & Совпадает \\ 
+\hline 1 & Запустить скрипт для монтирования ФС & На экран выводится запрос имени пользователя & Получено окно с полем ввода имени пользователя  & +  \\
+\hline 2 & Ввести имя неверное пользователя & На экран выводится запрос пароля & Получено окно с полем ввода пароля & + \\
+\hline 3 &  Ввести пароль & Сообщение об ошибке авторизации & Сообщение об ошибке авторизации &  + \\
+%\hline 4 &  &  &  &  \\
+%\hline &  &  &  &  \\
+\end{longtable}
+
+Аналогичным образом проводится тестирования для всех остальных модулей системы: производится последовательное нажатие на элементы управления и сравнение результатов с  ожидаемыми. По результатам проводимых тестов, периодически выявлялись ошибки и несоответствия заявленным требованиям. Процесс разработки постоянно сопровождался тестированием «белого ящика», таким образом, возникающие ошибки могли быть сразу устранены. Из числа выявленных и устраненных ошибок можно отметить:
+\begin{itemize}
+ \item некорректный код возврата клиентской части приложения при ошибке авторизации;
+ \item ошибки сохранения файлов;
+ \item ошибки сохранения расширеных атрибутов. 
+\end{itemize}
+
+Проведенный анализ и тестирование разработанной системы показали, что система работоспособна и подготовлена для процедуры внедрения и введения в  эксплуатацию.
 
 \section{План внедрения и отладки}
 \subsection{Организационные мероприятия}
