fixes in diploma

--- a/doc/dpl/biblio.bib
+++ b/doc/dpl/biblio.bib
@@ -82,8 +82,23 @@
   timestamp = {2011.01.08}
 }
 
+@ELECTRONIC{foss_migrate,
+  title = {Распоряжение от 17 декабря 2010 г. №2299-р 
+	
+	<<О плане перехода федеральных органов исполнительной власти и федеральных
+	бюджетных учреждений на использование свободного программного обеспечения
+	( 2011 -- 2015 годы )>>},
+  language = {russian},
+  organization = {Правительство РФ},
+  note = {Дата обращения: 20.12.2010},
+  url = {http://government.ru/gov/results/13617/},
+  owner = {savant},
+  timestamp = {2011.01.10}
+}
+
 @ELECTRONIC{foss_present,
   title = {План перехода на СПО в Аничковом дворце (Презентация)},
+  note = {Дата обращения: 15.12.2010},
   url = {http://info.anichkov.ru/present0/},
   owner = {savant},
   timestamp = {2011.01.08}
@@ -91,6 +106,7 @@
 
 @ELECTRONIC{fuse,
   title = {FUSE: Filesystem in Userspace},
+  note = {Дата обращения: 15.12.2010},
   url = {http://fuse.sourceforge.net/},
   owner = {savant},
   timestamp = {2010.12.24}
@@ -98,6 +114,7 @@
 
 @ELECTRONIC{fuse_wiki,
   title = {Filesystem in Userspace - Википедия},
+  note = {Дата обращения: 15.12.2010},
   url = {http://ru.wikipedia.org/wiki/Filesystem\_in\_Userspace},
   owner = {savant},
   timestamp = {2010.12.24}
@@ -149,12 +166,49 @@
   timestamp = {2011.01.08}
 }
 
+@ELECTRONIC{ieee_cloud,
+  title = {ORGs for Scalable, Robust, Privacy-Friendly Client Cloud Computing},
+  language = {russian},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://www.computer.org/portal/web/csdl/doi/10.1109/MIC.2008.107},
+  owner = {savant},
+  timestamp = {2011.01.08}
+}
+
 @ELECTRONIC{man_getxattr,
   title = {getxattr(2) - Linux man page},
   language = {English},
+  note = {Дата обращения: 15.12.2010},
   url = {http://linux.die.net/man/2/getxattr},
   owner = {savant},
   timestamp = {2011.01.09}
+}
+
+@ELECTRONIC{neon,
+  title = {neon HTTP and WebDAV client library},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://www.webdav.org/neon/},
+  owner = {savant},
+  timestamp = {2010.12.24}
+}
+
+@ELECTRONIC{odf_std,
+  title = {Уведомление об утверждении стандарта <<ГОСТ Р ИСО/МЭК 26300-2010>>},
+  language = {russian},
+  note = {Дата обращения: 20.12.2010},
+  url = {http://webportalsrv.gost.ru/portal/UVED_2007st.nsf/438c8c3c9e06dc87c32573a100549873/c4b660ff237e33ea432578020033edf5?OpenDocument},
+  owner = {savant},
+  timestamp = {2011.01.19}
+}
+
+@ELECTRONIC{pyqt4_ref,
+  title = {PyQt v4 - Python Bindings for Qt v4},
+  language = {russian},
+  address = {http://www.riverbankcomputing.co.uk/static/Docs/PyQt4/pyqt4ref.html},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://www.riverbankcomputing.co.uk/static/\\Docs/PyQt4/pyqt4ref.html},
+  owner = {savant},
+  timestamp = {2010.12.24}
 }
 
 @BOOKLET{sp_hygienic,
@@ -164,8 +218,20 @@
   timestamp = {2011.01.08}
 }
 
+@ELECTRONIC{sqlalchemy,
+  title = {SQLAlchemy 0.6.6 Documentation},
+  language = {russian},
+  organization = {SQLAlchemy},
+  address = {http://www.sqlalchemy.org/docs/},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://www.sqlalchemy.org/docs/},
+  owner = {savant},
+  timestamp = {2010.12.24}
+}
+
 @ELECTRONIC{ubuntu_req,
   title = {Системные требования ОС Ubuntu Desktop Edition 10.10},
+  note = {Дата обращения: 15.12.2010},
   url = {https://help.ubuntu.com/10.10/installation-guide/i386/minimum-hardware-reqts.html},
   owner = {savant},
   timestamp = {2011.01.08}
@@ -173,90 +239,38 @@
 
 @ELECTRONIC{ubuntu_server_req,
   title = {Системные требования ОС Ubuntu Server Edition 10.10},
-  url = {https://help.ubuntu.com/10.10/serverguide/C/preparing-to-install.html\#system-requirements},
-  owner = {savant},
-  timestamp = {2011.01.08}
-}
-
-@ELECTRONIC{wiki_acl,
-  month = {Январь},
-  year = {2011},
-  title = {ACL - Википедия},
-  url = {http://ru.wikipedia.org/wiki/ACL},
-  owner = {savant},
-  timestamp = {2011.01.10}
-}
-
-@ELECTRONIC{foss_migrate,
-  month = {декабрь},
-  year = {2010},
-  title = {Распоряжение от 17 декабря 2010 г. №2299-р 
-	
-	<<О плане перехода федеральных органов исполнительной власти и федеральных
-	бюджетных учреждений на использование свободного программного обеспечения
-	( 2011 -- 2015 годы )>>},
-  language = {russian},
-  organization = {Правительство РФ},
-  url = {http://government.ru/gov/results/13617/},
-  owner = {savant},
-  timestamp = {2011.01.10}
-}
-
-@ELECTRONIC{neon,
-  year = {2010},
-  title = {neon HTTP and WebDAV client library},
-  url = {http://www.webdav.org/neon/},
-  owner = {savant},
-  timestamp = {2010.12.24}
-}
-
-@ELECTRONIC{pyqt4_ref,
-  year = {2010},
-  title = {PyQt v4 - Python Bindings for Qt v4},
-  address = {http://www.riverbankcomputing.co.uk/static/Docs/PyQt4/pyqt4ref.html},
-  url = {http://www.riverbankcomputing.co.uk/static/Docs/PyQt4/pyqt4ref.html},
-  owner = {savant},
-  timestamp = {2010.12.24}
-}
-
-@ELECTRONIC{sqlalchemy,
-  month = {декабрь},
-  year = {2010},
-  title = {SQLAlchemy 0.6.6 Documentation},
-  organization = {SQLAlchemy},
-  address = {http://www.sqlalchemy.org/docs/},
-  url = {http://www.sqlalchemy.org/docs/},
-  owner = {savant},
-  timestamp = {2010.12.24}
-}
-
-@ELECTRONIC{webdav_wiki,
-  month = {ноябрь},
-  year = {2010},
-  title = {WebDAV - Википедия},
-  url = {http://ru.wikipedia.org/wiki/WebDAV},
-  owner = {savant},
-  timestamp = {2010.12.24}
-}
-
-@ELECTRONIC{ieee_cloud,
-  month = {октябрь},
-  year = {2008},
-  title = {ORGs for Scalable, Robust, Privacy-Friendly Client Cloud Computing},
-  url = {http://www.computer.org/portal/web/csdl/doi/10.1109/MIC.2008.107},
+  note = {Дата обращения: 15.12.2010},
+  url = {https://help.ubuntu.com/10.10/serverguide/C/preparing-to-install.html},
   owner = {savant},
   timestamp = {2011.01.08}
 }
 
 @ELECTRONIC{webdav_rfc,
-  month = {июнь},
-  year = {2007},
   title = {HTTP Extensions for Distributed Authoring},
+  language = {russian},
   organization = {IETF},
   address = {http://tools.ietf.org/html/rfc2518},
+  note = {Дата обращения: 15.12.2010},
   url = {http://tools.ietf.org/html/rfc2518},
   owner = {savant},
   timestamp = {2010.12.24}
+}
+
+@ELECTRONIC{webdav_wiki,
+  title = {WebDAV - Википедия},
+  language = {russian},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://ru.wikipedia.org/wiki/WebDAV},
+  owner = {savant},
+  timestamp = {2010.12.24}
+}
+
+@ELECTRONIC{wiki_acl,
+  title = {ACL - Википедия},
+  note = {Дата обращения: 15.12.2010},
+  url = {http://ru.wikipedia.org/wiki/ACL},
+  owner = {savant},
+  timestamp = {2011.01.10}
 }
 
 @comment{jabref-meta: selector_publisher:}
